# nanochat-inferonly-lightning

./: .gitmodules  CMakeLists.txt  PROFILING.md  README.md  convert_weights.py  run_inference.py  server.py
kernels/: attention.cu  flash_attention.cu  gemm.cu  ops.cu  rmsnorm.cu  rope.cu
src/: config.h  engine.cpp  engine.h  main.cpp  model.cpp  model.h  tensor.h  tokenizer.h
utils/: convert_weights.py  eval_core.py  export_tokenizer.py  run_inference.py  server.py
utils/server/: server.cpp
